--- a/result/2021-12-29.md
+++ b/result/2021-12-29.md
@@ -29,10 +29,10 @@
 29. [雷军](https://s.weibo.com//weibo?q=%E9%9B%B7%E5%86%9B&Refer=top) 215221
 30. [孙杨称自己值得期待](https://s.weibo.com//weibo?q=%23%E5%AD%99%E6%9D%A8%E7%A7%B0%E8%87%AA%E5%B7%B1%E5%80%BC%E5%BE%97%E6%9C%9F%E5%BE%85%23&Refer=top) 214816
 31. [小米12Pro](https://s.weibo.com//weibo?q=%E5%B0%8F%E7%B1%B312Pro&Refer=top) 203813
-32. [晚安短信计划](https://s.weibo.com//weibo?q=%23%E6%99%9A%E5%AE%89%E7%9F%AD%E4%BF%A1%E8%AE%A1%E5%88%92%23&Refer=top) 186921
-33. [原来腿短也是狗狗的硬伤](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E8%85%BF%E7%9F%AD%E4%B9%9F%E6%98%AF%E7%8B%97%E7%8B%97%E7%9A%84%E7%A1%AC%E4%BC%A4%23&Refer=top) 178215
-34. [被男友经常挂在嘴边有多甜](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E7%94%B7%E5%8F%8B%E7%BB%8F%E5%B8%B8%E6%8C%82%E5%9C%A8%E5%98%B4%E8%BE%B9%E6%9C%89%E5%A4%9A%E7%94%9C%23&Refer=top) 171720
-35. [西安大学生深夜收父亲千字鼓励信](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%B7%B1%E5%A4%9C%E6%94%B6%E7%88%B6%E4%BA%B2%E5%8D%83%E5%AD%97%E9%BC%93%E5%8A%B1%E4%BF%A1%23&Refer=top) 168892
+32. [西安大学生深夜收父亲千字鼓励信](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%B7%B1%E5%A4%9C%E6%94%B6%E7%88%B6%E4%BA%B2%E5%8D%83%E5%AD%97%E9%BC%93%E5%8A%B1%E4%BF%A1%23&Refer=top) 187188
+33. [晚安短信计划](https://s.weibo.com//weibo?q=%23%E6%99%9A%E5%AE%89%E7%9F%AD%E4%BF%A1%E8%AE%A1%E5%88%92%23&Refer=top) 186921
+34. [原来腿短也是狗狗的硬伤](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E8%85%BF%E7%9F%AD%E4%B9%9F%E6%98%AF%E7%8B%97%E7%8B%97%E7%9A%84%E7%A1%AC%E4%BC%A4%23&Refer=top) 178215
+35. [被男友经常挂在嘴边有多甜](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E7%94%B7%E5%8F%8B%E7%BB%8F%E5%B8%B8%E6%8C%82%E5%9C%A8%E5%98%B4%E8%BE%B9%E6%9C%89%E5%A4%9A%E7%94%9C%23&Refer=top) 171720
 36. [那些年在英语课上听过的歌](https://s.weibo.com//weibo?q=%23%E9%82%A3%E4%BA%9B%E5%B9%B4%E5%9C%A8%E8%8B%B1%E8%AF%AD%E8%AF%BE%E4%B8%8A%E5%90%AC%E8%BF%87%E7%9A%84%E6%AD%8C%23&Refer=top) 168489
 37. [西安大学生收到父亲千字长文鼓励](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%A4%A7%E5%AD%A6%E7%94%9F%E6%94%B6%E5%88%B0%E7%88%B6%E4%BA%B2%E5%8D%83%E5%AD%97%E9%95%BF%E6%96%87%E9%BC%93%E5%8A%B1%23&Refer=top) 148633
 38. [对话类桌游笑疯了](https://s.weibo.com//weibo?q=%E5%AF%B9%E8%AF%9D%E7%B1%BB%E6%A1%8C%E6%B8%B8%E7%AC%91%E7%96%AF%E4%BA%86&Refer=top) 141264
@@ -42,5 +42,6 @@
 42. [原来在家也能做出西餐感](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E5%9C%A8%E5%AE%B6%E4%B9%9F%E8%83%BD%E5%81%9A%E5%87%BA%E8%A5%BF%E9%A4%90%E6%84%9F%23&Refer=top) 128247
 43. [个个都是人才的迷惑新闻](https://s.weibo.com//weibo?q=%23%E4%B8%AA%E4%B8%AA%E9%83%BD%E6%98%AF%E4%BA%BA%E6%89%8D%E7%9A%84%E8%BF%B7%E6%83%91%E6%96%B0%E9%97%BB%23&Refer=top) 119513
 44. [停不了口的香酥红薯卷](https://s.weibo.com//weibo?q=%23%E5%81%9C%E4%B8%8D%E4%BA%86%E5%8F%A3%E7%9A%84%E9%A6%99%E9%85%A5%E7%BA%A2%E8%96%AF%E5%8D%B7%23&Refer=top) 101163
-45. [老师上课晕倒醒来第1句说抱歉吓到你们了](https://s.weibo.com//weibo?q=%23%E8%80%81%E5%B8%88%E4%B8%8A%E8%AF%BE%E6%99%95%E5%80%92%E9%86%92%E6%9D%A5%E7%AC%AC1%E5%8F%A5%E8%AF%B4%E6%8A%B1%E6%AD%89%E5%90%93%E5%88%B0%E4%BD%A0%E4%BB%AC%E4%BA%86%23&Refer=top) 74425
+45. [老师上课晕倒醒来第1句说抱歉吓到你们了](https://s.weibo.com//weibo?q=%23%E8%80%81%E5%B8%88%E4%B8%8A%E8%AF%BE%E6%99%95%E5%80%92%E9%86%92%E6%9D%A5%E7%AC%AC1%E5%8F%A5%E8%AF%B4%E6%8A%B1%E6%AD%89%E5%90%93%E5%88%B0%E4%BD%A0%E4%BB%AC%E4%BA%86%23&Refer=top) 94130
 46. [2021凤凰网时尚之选](https://s.weibo.com//weibo?q=2021%E5%87%A4%E5%87%B0%E7%BD%91%E6%97%B6%E5%B0%9A%E4%B9%8B%E9%80%89&Refer=top) 41834
+47. [消防员单手拎出冒火煤气罐秒关阀灭火](https://s.weibo.com//weibo?q=%23%E6%B6%88%E9%98%B2%E5%91%98%E5%8D%95%E6%89%8B%E6%8B%8E%E5%87%BA%E5%86%92%E7%81%AB%E7%85%A4%E6%B0%94%E7%BD%90%E7%A7%92%E5%85%B3%E9%98%80%E7%81%AD%E7%81%AB%23&Refer=top) 38886
