--- a/result/2021-12-30.md
+++ b/result/2021-12-30.md
@@ -47,5 +47,6 @@
 47. [阿姨获救后不舍踩消防员肩膀](https://s.weibo.com//weibo?q=%E9%98%BF%E5%A7%A8%E8%8E%B7%E6%95%91%E5%90%8E%E4%B8%8D%E8%88%8D%E8%B8%A9%E6%B6%88%E9%98%B2%E5%91%98%E8%82%A9%E8%86%80&Refer=top) 76423
 48. [很多姑娘都安静但她是金靖](https://s.weibo.com//weibo?q=%23%E5%BE%88%E5%A4%9A%E5%A7%91%E5%A8%98%E9%83%BD%E5%AE%89%E9%9D%99%E4%BD%86%E5%A5%B9%E6%98%AF%E9%87%91%E9%9D%96%23&Refer=top) 75422
 49. [元旦春节电影院预约限流](https://s.weibo.com//weibo?q=%23%E5%85%83%E6%97%A6%E6%98%A5%E8%8A%82%E7%94%B5%E5%BD%B1%E9%99%A2%E9%A2%84%E7%BA%A6%E9%99%90%E6%B5%81%23&Refer=top) 46779
-50. [原来猫咪也喜欢抱玩偶睡觉](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E7%8C%AB%E5%92%AA%E4%B9%9F%E5%96%9C%E6%AC%A2%E6%8A%B1%E7%8E%A9%E5%81%B6%E7%9D%A1%E8%A7%89%23&Refer=top) 19200
-51. [嘴巴模仿乐器有多惊艳](https://s.weibo.com//weibo?q=%23%E5%98%B4%E5%B7%B4%E6%A8%A1%E4%BB%BF%E4%B9%90%E5%99%A8%E6%9C%89%E5%A4%9A%E6%83%8A%E8%89%B3%23&Refer=top) 18524
+50. [原来猫咪也喜欢抱玩偶睡觉](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E7%8C%AB%E5%92%AA%E4%B9%9F%E5%96%9C%E6%AC%A2%E6%8A%B1%E7%8E%A9%E5%81%B6%E7%9D%A1%E8%A7%89%23&Refer=top) 25372
+51. [嘴巴模仿乐器有多惊艳](https://s.weibo.com//weibo?q=%23%E5%98%B4%E5%B7%B4%E6%A8%A1%E4%BB%BF%E4%B9%90%E5%99%A8%E6%9C%89%E5%A4%9A%E6%83%8A%E8%89%B3%23&Refer=top) 19320
+52. [2021被治愈的温暖瞬间](https://s.weibo.com//weibo?q=%232021%E8%A2%AB%E6%B2%BB%E6%84%88%E7%9A%84%E6%B8%A9%E6%9A%96%E7%9E%AC%E9%97%B4%23&Refer=top) 18769
